[package]
name = "linear-tools"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Linear issue tools via CLI + MCP"
repository = "https://github.com/allisoneer/agentic_auxilary"
readme = "../README.md"
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "linear-tools"
path = "src/main.rs"

[lib]
name = "linear_tools"
path = "src/lib.rs"

[dependencies]
universal-tool-core = { path = "../../universal_tool/universal-tool-core", version = "0.2.4", features = ["cli", "mcp"] }
cynic = { version = "3.4.3", features = ["http-reqwest"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
linear-queries = { path = "../linear-queries", version = "0.1.0" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = "0.8"
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
url = "2"

[dev-dependencies]
mockito = "1"
serial_test = "3"
