[package]
name = "universal-tool-core"
version = "0.2.1"
edition = "2024"
authors = ["Allison Durham"]
description = "Core runtime library for Universal Tool Framework - multi-interface code generation"
license = "MIT"
repository = "https://github.com/allisoneer/agentic_auxilary"
homepage = "https://github.com/allisoneer/agentic_auxilary"
keywords = ["codegen", "cli", "rest", "mcp", "framework"]
categories = ["development-tools", "web-programming", "command-line-interface"]
dist = false

[features]
default = []
cli = ["dep:clap", "dep:clap_complete", "dep:indicatif", "dep:tabled", "dep:dialoguer", "dep:console", "dep:serde_yaml", "dep:csv", "dep:atty", "universal-tool-macros/cli"]
mcp = ["dep:rmcp", "dep:tokio", "dep:tokio-util", "dep:async-trait", "universal-tool-macros/mcp"]
rest = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "universal-tool-macros/rest"]
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]

[dependencies]
# Core dependencies, always enabled
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
thiserror = "2.0"
universal-tool-macros = { version = "0.1.4", path = "../universal-tool-macros" }

# Interface-specific dependencies (optional)
clap = { version = "4.0", features = ["derive", "env"], optional = true }
clap_complete = { version = "4.0", optional = true }
indicatif = { version = "0.17", optional = true }
tabled = { version = "0.15", optional = true }
dialoguer = { version = "0.11", optional = true }
console = { version = "0.15", optional = true }
serde_yaml = { version = "0.9", optional = true }
csv = { version = "1.3", optional = true }
atty = { version = "0.2", optional = true }
async-trait = { version = "0.1", optional = true }
rmcp = { version = "0.6.4", features = ["server", "transport-io"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7", optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace", "cors"], optional = true }
utoipa = { version = "4", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
