[package]
name = "universal-tool-integration-tests"
version = "0.0.0"
edition = "2024"
publish = false

[dev-dependencies]
universal-tool-core = { path = "../universal-tool-core", features = ["cli"] }
universal-tool-macros = { path = "../universal-tool-macros" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# clap comes transitively via core when cli is enabled
