[package]
name = "universal-tool-integration-tests"
version = "0.0.0"
edition = "2024"
publish = false
license = "MIT"

[dev-dependencies]
universal-tool-core = { version = "0.2.3", path = "../universal-tool-core", features = ["cli"] }
universal-tool-macros = { version = "0.1.6", path = "../universal-tool-macros" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# clap comes transitively via core when cli is enabled
