[package]
name = "universal-tool-macros"
version = "0.1.0"
edition = "2024"
authors = ["Allison Durham"]
description = "Procedural macros for Universal Tool Framework - generate CLI, REST, and MCP interfaces"
license = "MIT"
repository = "https://github.com/allisoneer/agentic_auxilary/tree/main/universal_tool"
homepage = "https://github.com/allisoneer/agentic_auxilary"
keywords = ["proc-macro", "codegen", "cli", "rest", "mcp"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[features]
default = []
cli = []
rest = []
mcp = []

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

[dev-dependencies]
universal-tool-core = { path = "../universal-tool-core", features = ["cli"] }
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
