[package]
name = "universal-tool-macros"
version = "0.1.7"
edition = "2024"
authors = ["Allison Durham"]
description = "Procedural macros for Universal Tool Framework - generate CLI, REST, and MCP interfaces"
license = "MIT"
repository = "https://github.com/allisoneer/agentic_auxilary"
homepage = "https://github.com/allisoneer/agentic_auxilary"
keywords = ["proc-macro", "codegen", "cli", "rest", "mcp"]
categories = ["development-tools::procedural-macro-helpers"]

[package.metadata.dist]
dist = false

[lib]
proc-macro = true

[features]
default = []
cli = []
rest = []
mcp = []

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

# NOTE: Do not add [dev-dependencies] here to avoid circular dev-deps with universal-tool-core.
# Cross-crate macro integration tests live in universal-tool-integration-tests (publish = false).
