[workspace]

[package]
name = "example-07-streaming-tools"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anthropic-async = { path = "../..", features = ["streaming", "schemars"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
